<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/tV11"
    android:textSize="30sp"
    android:textColor="#000000"
    android:textStyle="bold"
    android:layout_centerHorizontal="true"
    />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editText1"
        android:layout_toStartOf="@+id/textView1"
        android:text="@string/tV12"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView1"
        android:layout_marginTop="118dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="234dp"
        android:text="@string/tV13"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView1"
        android:layout_alignTop="@+id/textView3"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/button1"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="157dp"
        android:layout_marginEnd="-28dp"
        android:layout_toStartOf="@+id/textView1"
        android:text="@string/bu11" />

    <Button
        android:id="@+id/button3"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/button1"
        android:layout_marginEnd="83dp"
        android:text="@string/bu12" />

    <TextView
        android:id="@+id/tv_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="239dp"
        />
</RelativeLayout>
